K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: db4558/flask-app-kube
        workingDir: /app 
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: log-data
          mountPath: /app/logs
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: log-data
        hostPath:
          path: /home/deep4558/Desktop/SPE_Major/SPE_kidneyDetection/backend/logs
