K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    nodePort: 30080
    targetPort: 3000
  selector:
    app: frontend
